--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>WebFrameWork</title>
     </head>
     <body>
-        <script src="src/index.ts"></script>
+        <script type="module" src="src/index.ts"></script>
     </body>
 </html>
